--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <spring-cloud.version>2023.0.3</spring-cloud.version>
         <flyway.version>9.22.3</flyway.version>
         <micrometer-tracing.version>1.3.3</micrometer-tracing.version>
+        <spring.boot-maven-plugin-version>2.5.7</spring.boot-maven-plugin-version>
         <open-api.version>2.5.0</open-api.version>
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
@@ -81,6 +82,15 @@
     </dependencyManagement>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>${spring-boot-maven-plugin-version}</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.jacoco</groupId>
