--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -60,6 +60,10 @@
             <artifactId>clients</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
