added observability dependencies and added zipkin to docker compose and edited readme

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,12 @@ services:
     depends_on:
       - zooKeeper
 
+  zipkin:
+    image: openzipkin/zipkin
+    container_name: zipkin
+    ports:
+      - "9411:9411"
+
 networks:
   postgres:
     driver: bridge
